# corpus

./: CHANGELOG.md  LICENSE  pyproject.toml
docs/: conf.py
